[gd_scene load_steps=7 format=3 uid="uid://dljem16vksx4f"]

[ext_resource type="Script" path="res://objects/charger.gd" id="1_wtso5"]
[ext_resource type="PackedScene" uid="uid://bydjjgbtlrt0q" path="res://objects/suit_charger/suit_charger_model.tscn" id="2_iy4hw"]
[ext_resource type="AudioStream" uid="uid://0sdhnt7i8ppl" path="res://sounds/items/suitchargeok1.wav" id="2_jr5lt"]
[ext_resource type="AudioStream" uid="uid://54t3el0mhrmf" path="res://sounds/items/suitcharge1.wav" id="3_n5oku"]
[ext_resource type="AudioStream" uid="uid://cryq635nw1hgk" path="res://sounds/items/suitchargeno1.wav" id="4_ajjpa"]

[sub_resource type="BoxShape3D" id="BoxShape3D_xqldx"]
size = Vector3(0.6, 1.2, 0.2)

[node name="SuitCharger" type="StaticBody3D" groups=["MetalMaterial"]]
script = ExtResource( "1_wtso5" )
type = 1

[node name="Model" parent="." instance=ExtResource( "2_iy4hw" )]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.1)
shape = SubResource( "BoxShape3D_xqldx" )

[node name="TimerCharge" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1

[node name="TimerSound" type="Timer" parent="."]
process_callback = 0
wait_time = 0.6
one_shot = true

[node name="SoundShot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( "2_jr5lt" )
bus = &"SFX"

[node name="SoundCharge" type="AudioStreamPlayer" parent="."]
stream = ExtResource( "3_n5oku" )
bus = &"SFX"

[node name="SoundDeny" type="AudioStreamPlayer" parent="."]
stream = ExtResource( "4_ajjpa" )
bus = &"SFX"

[connection signal="timeout" from="TimerSound" to="." method="_on_timer_sound_timeout"]
